# libstrcheck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  release.ps1  strcheck.h
src/: libstrcheck.c  strcheck.c
test/: test1.c
